--- a/package.json
+++ b/package.json
@@ -1,25 +1,44 @@
 {
   "name": "news-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "^16.5.0",
+    "@react-native-firebase/remote-config": "^16.5.0",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-cellular": "~5.0.1",
+    "expo-dev-client": "~2.0.1",
+    "expo-device": "~5.0.0",
+    "expo-network": "^5.0.0",
+    "expo-screen-orientation": "~5.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-web": "~0.18.9",
+    "react-native-webview": "11.23.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-native-orientation": "^5.0.1",
+    "@types/styled-components-react-native": "^5.2.0",
     "typescript": "^4.6.3"
   },
   "private": true
