--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "news-app",
-    "slug": "news-app",
-    "version": "1.0.0",
+    "name": "БК",
+    "slug": "bk",
+    "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/news-icon.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/news-icon.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,19 +19,19 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.news-app"
+      "bundleIdentifier": "alrought.gameappz"
     },
     "android": {
-      "package": "com.yourcompany.yourappname",
+      "package": "alrought.gameappz",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/news-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "googleServicesFile": "./google-services.json"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
     },
     "plugins": [
       "@react-native-firebase/app",
@@ -40,11 +40,19 @@
         {
           "initialOrientation": "DEFAULT"
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "compileSdkVersion": 31,
+          "targetSdkVersion": 31,
+          "minSdkVersion": 22
+        }
       ]
     ],
     "extra": {
       "eas": {
-        "projectId": "010eb7bb-3ab9-49a8-b551-3c0d28919ae2"
+        "projectId": "025cd289-f94b-4722-9a21-eb199bc2d90f"
       }
     }
   }
