--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^16.5.0",
@@ -16,6 +15,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-build-properties": "~0.4.1",
     "expo-cellular": "~5.0.1",
     "expo-dev-client": "~2.0.1",
     "expo-device": "~5.0.0",
@@ -37,7 +37,6 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "@types/react-native-orientation": "^5.0.1",
     "@types/styled-components-react-native": "^5.2.0",
     "typescript": "^4.6.3"
   },
